terraform/igw.tf
####################
# Internet Gateway #
####################
# https://www.terraform.io/docs/providers/aws/r/internet_gateway.html
resource "aws_internet_gateway" "main" {
  vpc_id = aws_vpc.main.id

  tags = {
    Name = "ome-report-bff-igw"
  }
}
